First builder implementation

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,5 @@ install:
   - conda config --set always_yes yes --set changeps1 no
   - conda update -q conda
   - conda info -a
+script:
+  - bash build_docs.sh
