--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,7 @@ branches:
 python:
   - '3.6'
 install:
-  - sudo apt-get update
-  - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
-  - bash miniconda.sh -b -p $HOME/miniconda
-  - export PATH="$HOME/miniconda/bin:$PATH"
-  - hash -r
-  - conda config --set always_yes yes --set changeps1 no
-  - conda update -q conda
-  - conda info -a
+  - pip install doc2dash
 script:
   - bash build_docs.sh
 after_success:
